fix css on mobile

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -730,7 +730,7 @@ properly.
 	   float: none;
 	   margin-left: 0;
 	   margin-right: 0;
-      padding: 0 20px;
+      padding: 0 30px;
    }
    .row .row { width: auto; max-width: none; margin: 0 -30px; }
 
